--- a/catch-of-the-day/public/index.html
+++ b/catch-of-the-day/public/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+  <script src="http://localhost:8097"></script>
+  
+  
   <input type="checkbox" id="fold">
   <label for="fold">Fold</label>
 
